<resources>
    <string name="app_name">English Word Recite</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="generate_paper">生成试卷</string>
    <string name="scan_paper">扫描阅卷</string>
    <string name="enter_word_count">请输入单词数量</string>
    <string name="word_count_hint">例如：10</string>
    <string name="generate">生成</string>
    <string name="take_photo">拍照</string>
    <string name="select_photo">选择照片</string>
    <string name="processing">处理中...</string>
    <string name="score">得分：</string>
    <string name="correct_answers">正确答案：</string>
    <string name="your_answers">你的答案：</string>
    <string name="permission_camera_rationale">需要相机权限来扫描试卷</string>
    <string name="permission_storage_rationale">需要存储权限来选择照片</string>
    <string name="permission_denied">权限被拒绝</string>
    <string name="permission_denied_explanation">需要权限才能使用此功能</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
</resources>
